[gd_scene load_steps=2 format=3 uid="uid://bajibmipjnmdt"]

[ext_resource type="Script" uid="uid://cc1pnp718pt1u" path="res://scenes/views/tag_editor_view.gd" id="1_msd4s"]

[node name="TagEditorView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_msd4s")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 2

[node name="AddTag" type="Button" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add new tag"
flat = true

[node name="VSeparator" type="VSeparator" parent="BoxContainer"]
layout_mode = 2

[node name="Refresh" type="Button" parent="BoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Refresh tags"
flat = true

[node name="VSeparator2" type="VSeparator" parent="BoxContainer"]
layout_mode = 2

[node name="TagTree" type="Tree" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
columns = 3
column_titles_visible = true
hide_folding = true
enable_recursive_folding = false
hide_root = true

[connection signal="pressed" from="BoxContainer/Refresh" to="." method="_on_refresh_pressed"]
